static/css/style.css
body {
    margin: 0px;
    padding: 0px;
    background-color: #FFFFFF;
    overflow: auto;
    font-family: 'Roboto', sans-serif;
}

.navbar {
    background-color: white;
    padding: 20px;
    position: relative;
}

.navbar-brand {
    background-color: white;
    padding: 20px;
}

.navbar-nav {
    float: right;
    background: #F0F0F0;
    padding-left: 90px;
    line-height: 40px;
    margin-right: -15px;
}

.navbar-light .navbar-nav .nav-link {
    font-size: 18px;
    text-transform: capitalize;
    color: #708296;
    text-decoration: none;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #1D385A;
    background-color: #F0F0F0;
    font-weight: bold;
}

.active a {
    color: #1D385A !important;
}

.sidenav {
    padding: 20px;
    width: 300px;
    height: 100%;
    position: fixed;
    z-index: 1;
    background-color: #708296;
    transition: 0.5s;
    margin-left: 15px;
    overflow: auto;
}

.sidenav a {
    padding: 15px 8px 15px 32px;
    text-decoration: underline;
    font-size: 20px;
    color: #F0F0F0;
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
    background-color: #1b203d;
}

.sidenav a, .dropdown-btn {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 20px;
    color: #f1f1f1;
    display: block;
    border: none;
    background: none;
    width: 100%;
    text-align: left;
    cursor: pointer;
    outline: none;
}

.sidenav a:hover, .dropdown-btn:hover {
    color: #f1f1f1;
}

.dropdown-container {
    display: none;
    background-color: #262626;
    padding-left: 8px;
}

.fa-caret-down {
    float: right;
    padding-right: 8px;
}

#card-container {
    width: 900px;
    height: 100%;
    margin-left: 300px;
    transition: margin-left .5s;
    background-color: #F0F0F0;
    padding: 60px;
    margin-right: 15px;
    margin-top: 0px;
}

#card-container h3 {
    color: #1D385A;
    margin-left: 14px;
}

.p {
    color: #1D385A;
    padding: 10px;
    margin-left: 130px;
}

.col-div-6 {
    width: 50%;
    float: left;
    background-color: #F0F0F0;
    padding: 20px;

}

.box {
    height: 150px;
    background-color: #FFFFFF;
}

.box p {
    font-size: 35px;
    color: #1D385A;
    font-weight: bold;
    line-height: 30px;
    padding-left: 10px;
    margin-top: 40px;
    display: inline-block;
    text-align: right;
}

.box p span {
    margin-top: 40px;
    font-size: 22px;
    font-weight: bold;
    color: #1D385A;
    text-align: center;
    padding: 10px;
}

